WDGCA-15 fixed some media queries for the close button in filter sidebar on mobile

--- a/src/component/pages/explore/filterSideBar.module.scss
+++ b/src/component/pages/explore/filterSideBar.module.scss
@@ -1,5 +1,5 @@
 .filterBarContainer {
-    @media (max-width: 600px) {
+    @media (max-width: 900px) {
         height: 100vh;
         width: 100vw;
         position: fixed;
@@ -18,3 +18,9 @@
     justify-content: center;
     padding: 20px 0px;
   }
+
+  .closeButtonContainer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  
